Changes the yarn commands of lib to cross-platform. The   yarn test commands still needs work.

--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,7 @@
     "test:all": "yarn test:unit && yarn test:int && yarn test:e2e",
     "test:e2e": "yarn build && yarn configapp:test && npx kill-port 4000 && yarn start >/dev/null & playwright test && npx kill-port 4000",
     "test:int": "jest -c ./jest.integration.config.json ../test/integration --coverage",
-    "test:unit": "jest -c ./jest.config.json ../test/unitTests --coverage",
-    "test": "script/test.bash"
+    "test:unit": "jest -c ./jest.config.json ../test/unitTests --coverage"
   },
   "eslintConfig": {
     "extends": [
