--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -43,8 +43,8 @@ jobs:
         run: |
           cd servers/lib
           yarn install
-          yarn test -u
-          yarn test -i
+          yarn test:unit
+          yarn test:int
         env:
           PORT: 4001
           LOCAL_PATH: ${{ github.workspace }}/files
