--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -19,10 +19,9 @@
     "syntax": "npx eslint . --fix",
     "pretest": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md",
     "test:all": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json --coverage",
-    "test:int": "jest ../test/integration --coverage",
-    "test:unit": "jest ../test/unit --coverage",
-    "test": "script/test.bash"
+    "test:e2e": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/ && npx cross-env TEST_PATH=test/data jest --config ./test/jest-e2e.json --coverage && npx rimraf ../../files/user2/tools/README.md",
+    "test:int": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/ && npx cross-env TEST_PATH=test/data jest ../test/integration --coverage && npx rimraf ../../files/user2/tools/README.md",
+    "test:unit": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/ && npx cross-env TEST_PATH=test/data jest ../test/unit --coverage && npx rimraf ../../files/user2/tools/README.md"
   },
   "bin": "./dist/src/main.js",
   "dependencies": {
