--- a/deploy/vagrant/make_boxes/dtaas/Vagrantfile
+++ b/deploy/vagrant/make_boxes/dtaas/Vagrantfile
@@ -5,6 +5,7 @@
 
 Vagrant.configure("2") do |config|
     config.vm.box = "ubuntu/jammy64"
+    config.disksize.size = "200GB"
       
     config.vm.provider "virtualbox" do |vb|
       vb.name = "dtaas"
