--- a/deploy/vagrant/two-machine/Vagrantfile
+++ b/deploy/vagrant/two-machine/Vagrantfile
@@ -11,14 +11,13 @@ Vagrant.configure(2) do |config|
     config.vm.define opts["name"] do |node|
       node.vm.box = "dtaas"
       node.vm.hostname = opts["hostname"]
-      node.vm.network "public_network", :bridge => 'ens10f3', :mac => opts["mac"]
+      node.vm.network "public_network", :mac => opts["mac"]
 
       node.vm.provider "virtualbox" do |vb|
         vb.memory = 6096
         vb.cpus = 3
         vb.name = opts["name"]
       end
-
 
       node.ssh.private_key_path = "vagrant"
     end
