--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -25,18 +25,17 @@
   },
   "bin": "./dist/src/main.js",
   "dependencies": {
-    "@apollo/client": "^3.8.4",
+    "@apollo/client": "^3.8.8",
     "@apollo/server": "^4.9.3",
     "@nestjs/apollo": "^12.0.9",
     "@nestjs/common": "^10.2.6",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.6",
     "@nestjs/graphql": "^12.0.9",
-    "@nestjs/platform-express": "^10.2.6",
+    "@nestjs/platform-express": "^10.3.0",
     "axios": "^1.5.1",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "graphql": "^16.8.1",
     "mock-fs": "^5.2.0",
     "reflect-metadata": "^0.1.13",
@@ -47,7 +46,7 @@
     "@nestjs/cli": "^10.1.18",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.6",
-    "@types/express": "^4.17.18",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.5",
     "@types/node": "20.7.2",
     "@types/supertest": "^2.0.13",
@@ -62,6 +61,7 @@
     "graphql-scalars": "^1.22.2",
     "jest": "29.7.0",
     "prettier": "^3.0.3",
+    "react": "^18.2.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
