Fixes github action of library microservice

--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -47,10 +47,7 @@ jobs:
         env:
           PORT: 4001
           LOCAL_PATH: ${{ github.workspace }}/files
-          GITLAB_GROUP: dtaas
-          GITLAB_URL: https://gitlab.com/api/graphql
-          TOKEN: token
-          MODE: gitlab
+          MODE: local
           LOG_LEVEL: debug
           APOLLO_PATH: /lib
 
