Updates installation scripts and improves documentation (#418)
  - Makes all the yarn commands cross-platform. Now the developers can
    work on all OS platforms.
  - Fixes mistakes in the vagrant installation scripts and documentation.
  - Removes hardcoded host network interface from the Vagrantfile; Users
    can now select any one of their available network interfaces.
  - Adds script for installing gitlab.
  - Updates client env.js to check for browser environment
  - Updates mkdocs version and its dependencies
  - Fixes some mistakes in the documentation
  - Updates npm publish steps regarding publishing packages to the default npm registry

--- a/deploy/vagrant/single-machine/Vagrantfile
+++ b/deploy/vagrant/single-machine/Vagrantfile
@@ -6,14 +6,12 @@ Vagrant.configure(2) do |config|
 
   config.vm.box = "dtaas"
 
-  # gateway node - hosts traefik, dns and static client website
   config.vm.define "dtaas" do |node|
-    node.vm.hostname = "foo.com" 
-    node.vm.network "public_network", :bridge => 'ens10f3', :mac => "02163ef4f4f4"
+    node.vm.hostname = "foo.com"
+    node.vm.network "public_network", :mac => "02163ef4f4f4"
 
-
-   node.vm.provider "virtualbox" do |vb|
-      vb.name = "DTaaSOne"
+    node.vm.provider "virtualbox" do |vb|
+      vb.name = "dtaas-one"
       vb.memory = 16384
       vb.cpus = 8
     end
