--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -39,12 +39,27 @@ jobs:
           yarn install	
           yarn build
 
-      - name: Run unit and integration tests
+      - name: Run unit tests
         run: |
           cd servers/lib
           yarn install
-          yarn test -u
-          yarn test -i
+          yarn test:unit
+        env:
+          PORT: 4001
+          LOCAL_PATH: ${{ github.workspace }}/files
+          GITLAB_GROUP: dtaas
+          GITLAB_URL: https://gitlab.com/api/graphql
+          TOKEN: token
+          MODE: gitlab
+          LOG_LEVEL: debug
+          APOLLO_PATH: /lib
+
+      - name: Run integration tests
+        if: ${{ always() }}
+        run: |
+          cd servers/lib
+          yarn install
+          yarn test:int
         env:
           PORT: 4001
           LOCAL_PATH: ${{ github.workspace }}/files
