--- a/deploy/vagrant/make_boxes/dtaas/Vagrantfile
+++ b/deploy/vagrant/make_boxes/dtaas/Vagrantfile
@@ -4,15 +4,17 @@
 # Creates the base environment for running the DTaaS application
 
 Vagrant.configure("2") do |config|
-    config.vm.box = "ubuntu/jammy64"
-      
-    config.vm.provider "virtualbox" do |vb|
-      vb.name = "dtaas"
-      vb.memory = 16384
-      vb.cpus = 8
-    end
-  
-    config.vm.provision "shell", path: "user.sh"
-    #config.vm.provision "shell", path: "developer.sh"
-end
+  config.vm.box = "ubuntu/jammy64"
+  config.disksize.size = "200GB"
+  config.vm.hostname = "foo.com"
+  config.vm.network "public_network", :mac => "02163ee0bf12"
 
+  config.vm.provider "virtualbox" do |vb|
+    vb.name = "dtaas"
+    vb.memory = 16384
+    vb.cpus = 8
+  end
+
+  config.vm.provision "shell", path: "user.sh"
+  #config.vm.provision "shell", path: "developer.sh"
+end
