--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "4000:4000"
     volumes:
-      - "$PWD/deploy/config/client/env.js:/dtaas/client/build/env.js"
+      - "$PWD/client/config/dev.js:/dtaas/client/build/env.js"
   libms:
     build: 
       context: ./
@@ -18,7 +18,6 @@ services:
     volumes:
       - "$PWD/deploy/config/lib.docker:/dtaas/libms/.env"
       - "$PWD/files:/dtaas/libms/files"
-
   runner:
     build: 
       context: ./
@@ -28,27 +27,28 @@ services:
     volumes:
       - "$PWD/files:/dtaas/runner/files"
 
-  # ml-workspace-user1:
-  #   image: mltooling/ml-workspace-minimal:0.13.2
-  #   container_name: ml-workspace-user1
-  #   ports:
-  #     - "8090:8080"
-  #   volumes:
-  #     - "$PWD/files/user1:/workspace"
-  #     - "$PWD/files/common:/workspace/common"
-  #   environment:
-  #     - AUTHENTICATE_VIA_JUPYTER=""
-  #     - WORKSPACE_BASE_URL="user1"
-  #   shm_size: 512m
-  #   restart: always
+  ml-workspace-user1:
+    image: mltooling/ml-workspace-minimal:0.13.2
+    container_name: ml-workspace-user1
+    ports:
+      - "8090:8080"
+    volumes:
+      - "$PWD/files/user1:/workspace"
+      - "$PWD/files/common:/workspace/common"
+    environment:
+      - AUTHENTICATE_VIA_JUPYTER
+      - WORKSPACE_BASE_URL=user1
+    shm_size: 512m
+    restart: always
 
-  # traefik-gateway:
-    # image: traefik:v2.10
-    # container_name: traefik-gateway
-    # network_mode: host
-    # volumes:
-      # - "$PWD/servers/config/gateway/traefik.yml:/etc/traefik/traefik.yml"
-      # - "$PWD/servers/config/gateway/auth:/etc/traefik/auth"
-      # - "$PWD/servers/config/gateway/dynamic:/etc/traefik/dynamic"
-      # - "/var/run/docker.sock:/var/run/docker.sock"
-    # restart: always
+  traefik-gateway:
+    image: traefik:v2.10
+    container_name: traefik-gateway
+    ports:
+      - "9000:80"
+    volumes:
+      - "$PWD/servers/config/gateway/traefik.yml:/etc/traefik/traefik.yml"
+      - "$PWD/servers/config/gateway/auth:/etc/traefik/auth"
+      - "$PWD/servers/config/gateway/dynamic/fileConfig.docker.yml:/etc/traefik/dynamic/fileConfig.yml"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    restart: always
