Resolved PR Review issues

--- a/servers/auth/.env
+++ b/servers/auth/.env
@@ -1,3 +1,7 @@
-TOP_DIR = '/home/astitva/Desktop/DTaaS/servers/auth/'
-FILE_DIR = '/home/astitva/Desktop/DTaaS/servers/auth/files'
-username1 = 'user1'
+TOP_DIR='/home/astitva/Desktop/dockertrails/progress'
+BASE_URL='https://gitlab.com'
+CLIENT_ID='xx'
+CLIENT_SECRET='xx'
+OAUTH_SECRET='randomabcdefg'
+username1='user1'
+username2='user2'
