LibMS, Client integration Trial 1

--- a/servers/auth/.env
+++ b/servers/auth/.env
@@ -1,7 +1,8 @@
-TOP_DIR='/home/astitva/Desktop/dockertrails/progress'
+DTAAS_DIR='/home/astitva/Desktop/DTaaS'
+TOP_DIR='/home/astitva/Desktop/DTaaS/servers/auth'
 BASE_URL='https://gitlab.com'
 CLIENT_ID='xx'
-CLIENT_SECRET='xx'
+CLIENT_SECRET='gloas-xx'
 OAUTH_SECRET='randomabcdefg'
 username1='user1'
 username2='user2'
