--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -42,8 +42,7 @@ jobs:
       - name: Run all tests
         run: |
           ls ${LOCAL_PATH}
-          echo ${LOCAL_PATH}
-          print ${LOCAL_PATH}
+          pwd
           cd servers/lib
           yarn install
           yarn test:all
