--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -18,20 +18,21 @@
     "start": "node dist/src/main.js",
     "syntax": "npx eslint . --fix",
     "pretest": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md",
-    "test:all": "jest --coverage",
-    "test:e2e": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/ && npx cross-env TEST_PATH=test/data jest --config ./test/jest-e2e.json --coverage && npx rimraf ../../files/user2/tools/README.md",
-    "test:int": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/ && npx cross-env TEST_PATH=test/data jest ../test/integration --coverage && npx rimraf ../../files/user2/tools/README.md",
-    "test:unit": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/ && npx cross-env TEST_PATH=test/data jest ../test/unit --coverage && npx rimraf ../../files/user2/tools/README.md"
+    "posttest": "npx rimraf ../../files/user2/tools/README.md",
+    "test:all": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md && npx cross-env LOCAL_PATH=test/data jest --coverage && npx rimraf ../../files/user2/tools/README.md",
+    "test:e2e": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md && npx cross-env TEST_PATH=test/data jest --config ./test/jest-e2e.json --coverage && npx rimraf ../../files/user2/tools/README.md",
+    "test:int": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md && npx cross-env TEST_PATH=test/data jest ../test/integration --coverage && npx rimraf ../../files/user2/tools/README.md",
+    "test:unit": "npx cross-env LOCAL_PATH=test/data jest ../test/unit --coverage"
   },
   "bin": "./dist/src/main.js",
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "@apollo/server": "^4.9.3",
     "@nestjs/apollo": "^12.0.9",
-    "@nestjs/common": "^10.2.6",
+    "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.2.6",
-    "@nestjs/graphql": "^12.0.9",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/graphql": "^12.0.11",
     "@nestjs/platform-express": "^10.3.0",
     "axios": "^1.5.1",
     "commander": "^11.1.0",
@@ -43,9 +44,9 @@
     "type-graphql": "^2.0.0-beta.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.1.18",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.2.6",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.5",
     "@types/node": "20.7.2",
