--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -45,6 +45,9 @@ jobs:
           pwd
           cd servers/lib
           yarn install
+          yarn test:unit
+          yarn test:int
+          yarn test:e2e
           yarn test:all
         env:
           PORT: 4001
