--- a/mkdocs-github.yml
+++ b/mkdocs-github.yml
@@ -7,8 +7,8 @@ copyright: Copyright &copy; 2022 - 2023 The INTO-CPS Association
 theme: 
   name: material
   locale: en
-  logo: assets/into-cps-logo.png
-  favicon: assets/into-cps-logo.png
+  logo: assets/dtaas-logo.png
+  favicon: assets/dtaas-logo.png
   features:
     - navigation.tabs
     - navigation.tracking
@@ -71,7 +71,9 @@ nav:
       - Publish NPM Packages: developer/npm-packages.md
   - Bugs: bugs.md
   - Thanks: thanks.md
-  - License: LICENSE.md
+  - License: 
+      - DTaaS: LICENSE.md
+      - Third Party: third-party.md 
 
 use_directory_urls: false
 
