--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,8 @@ copyright: Copyright &copy; 2022 - 2023 The INTO-CPS Association
 theme: 
   name: material
   locale: en
-  logo: assets/into-cps-logo.png
-  favicon: assets/into-cps-logo.png
+  logo: assets/dtaas-logo.png
+  favicon: assets/dtaas-logo.png
   features:
     - navigation.tabs
     - navigation.tracking
@@ -71,7 +71,9 @@ nav:
       - Publish NPM Packages: developer/npm-packages.md
   - Bugs: bugs.md
   - Thanks: thanks.md
-  - License: LICENSE.md
+  - License: 
+      - DTaaS: LICENSE.md
+      - Third Party: third-party.md 
 
 use_directory_urls: false
 
@@ -119,7 +121,7 @@ plugins:
   - with-pdf:
       author: "DTaaS Development Team"
       cover: true
-      cover_logo: assets/into-cps-logo.png
+      cover_logo: assets/dtaas-logo.png
       cover_subtitle: ""
       enabled_if_env: MKDOCS_ENABLE_PDF_EXPORT
       output_path: pdf/DTaaS-docs.pdf
