--- a/servers/config/gateway/dynamic/fileConfig.yml
+++ b/servers/config/gateway/dynamic/fileConfig.yml
@@ -4,25 +4,13 @@ http:
       entryPoints:
         - http
       rule: 'Host(`localhost`)'
-      middlewares:
-        - basic-auth
       service: dtaas
 
-    user1:
+    aryanbhosale:
       entryPoints:
         - http
-      rule: 'Host(`localhost`) && PathPrefix(`/user1`)'
-      middlewares:
-        - basic-auth
-      service: user1
-
-    user2:
-      entryPoints:
-        - http
-      rule: 'Host(`localhost`) && PathPrefix(`/user2`)'
-      middlewares:
-        - basic-auth
-      service: user2
+      rule: 'Host(`localhost`) && PathPrefix(`/aryanbhosale`)'
+      service: aryanbhosale
 
     libms:
       entryPoints:
@@ -30,30 +18,16 @@ http:
       rule: 'Host(`localhost`) && PathPrefix(`/lib`)'
       service: libms
 
-
-  # Middleware: Basic authentication
-  middlewares:
-    basic-auth:
-      basicAuth:
-        usersFile: "/etc/traefik/auth"
-        removeHeader: true
-
-
   services:
     dtaas:
       loadBalancer:
         servers:
           - url: "http://localhost:4000"
 
-    user1:
+    aryanbhosale:
       loadBalancer:
         servers:
           - url: "http://localhost:8090"
-
-    user2:
-      loadBalancer:
-        servers:
-          - url: "http://localhost:8091"
 
     libms:
       loadBalancer:
