Removed cloudcmd test from all

--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -19,7 +19,7 @@
     "syntax": "npx eslint . --fix",
     "pretest": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md",
     "posttest": "npx rimraf ../../files/user2/tools/README.md",
-    "test:all": "npx cross-env LOCAL_PATH=test/data jest --coverage",
+    "test:all": "npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage",
     "test:e2e": "npx cross-env LOCAL_PATH=test/data jest --config ./test/jest-e2e.json --coverage",
     "test:int": "npx cross-env LOCAL_PATH=test/data jest ../test/integration --coverage",
     "test:unit": "npx cross-env LOCAL_PATH=test/data jest ../test/unit --coverage",
