--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -16,16 +16,16 @@
     "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test",
     "start": "node dist/src/main.js",
-    "start:pm2": "pm2 start pm2.config.js --env development",
+    "start:pm2": "pm2 start pm2.config.js",
     "stop:pm2": "pm2 delete libms",
     "syntax": "npx eslint . --fix",
     "pretest": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md",
     "posttest": "npx rimraf ../../files/user2/tools/README.md",
-    "test:all": "npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage",
+    "test:all": "npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage --coverageThreshold=\"{}\" && yarn test:cloudcmd",
     "test:e2e": "npx cross-env LOCAL_PATH=test/data jest --config ./test/jest-e2e.json --coverage",
     "test:int": "npx cross-env LOCAL_PATH=test/data jest ../test/integration --coverage",
     "test:unit": "npx cross-env LOCAL_PATH=test/data jest ../test/unit --coverage",
-    "test:cloudcmd": "pm2 start -f --name libms-test dist/src/main.js -- -c .env -f ./config/cloudcmd.json && jest test/cloudcmd --collectCoverage=false && pm2 delete libms-test"
+    "test:cloudcmd": "pm2 start -f --name libms-test dist/src/main.js -- -c .env -f ./config/cloudcmd.json && jest test/cloudcmd --coverage --coverageThreshold=\"{}\" && pm2 delete libms-test"
   },
   "bin": "./dist/src/main.js",
   "dependencies": {
