fix libms tests

--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           cd servers/lib
           yarn install
+          yarn build
           yarn test:all
         env:
           PORT: 4001
