--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,14 +1,22 @@
-name: Build and Push Docker Images
+name: Build and Push Docker Image
 
-on: 
-  push:
-    branches:
-      - "381-create-docker-containers-for-client-lib-and-runner"  
-  workflow_dispatch:
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: into-cps-association/dtaas-web:latest
+on:
+  workflow_call:
+    inputs:
+      registry:
+        required: false
+        type: string
+        default: 'ghcr.io'
+      image-name:
+        required: true
+        type: string
+      version:
+        required: false
+        type: string
+        default: 'latest'
+      dockerfile:
+        required: true
+        type: string
 
 jobs:
   build-and-push-image:
@@ -23,16 +31,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ${{ inputs.registry }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./docker/client.dockerfile
+          file: ./docker/${{ inputs.dockerfile }}
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: ${{ inputs.registry }}/${{ inputs.image-name }}:${{ inputs.version }}
