--- a/docker/compose.local.yml
+++ b/docker/compose.local.yml
@@ -2,15 +2,11 @@ version: '3'
 
 services:
   client:
-    image: intocps/dtaas-client
-    ports:
-      - "4000:4000"
+    image: intocps/dtaas-web
     volumes:
-      - "../client/config/test.js:/dtaas/client/build/env.js"
+      - "../deploy/config/client/env.local.js:/dtaas/client/build/env.js"
   libms:
     image: intocps/libms
-    ports:
-      - "4001:4001"
     volumes:
       - "../deploy/config/lib.docker:/dtaas/libms/.env"
       - "../files:/dtaas/libms/files"
@@ -18,8 +14,6 @@ services:
   ml-workspace-user1:
     image: mltooling/ml-workspace-minimal:0.13.2
     container_name: ml-workspace-user1
-    ports:
-      - "8090:8080"
     volumes:
       - "../files/user1:/workspace"
       - "../files/common:/workspace/common"
@@ -35,6 +29,6 @@ services:
       - "9000:80"
     volumes:
       - "../servers/config/gateway/traefik.yml:/etc/traefik/traefik.yml"
-      - "../servers/config/gateway/auth:/etc/traefik/auth"
+      - "../deploy/config/gateway/auth:/etc/traefik/auth"
       - "../servers/config/gateway/dynamic/fileConfig.docker.yml:/etc/traefik/dynamic/fileConfig.yml"
       - "/var/run/docker.sock:/var/run/docker.sock"
