Updates the config flags and README

--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -21,11 +21,11 @@
     "syntax": "npx eslint . --fix",
     "pretest": "npx shx cp test/data/user2/tools/README.md ../../files/user2/tools/README.md",
     "posttest": "npx rimraf ../../files/user2/tools/README.md",
-    "test:all": "npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage --coverageThreshold=\"{}\"",
+    "test:all": "npx cross-env LOCAL_PATH=test/data jest --testPathIgnorePatterns=cloudcmd --coverage",
     "test:e2e": "npx cross-env LOCAL_PATH=test/data jest --config ./test/jest-e2e.json --coverage",
     "test:int": "npx cross-env LOCAL_PATH=test/data jest ../test/integration --coverage",
     "test:unit": "npx cross-env LOCAL_PATH=test/data jest ../test/unit --coverage",
-    "test:cloudcmd": "pm2 start -f --name libms-test dist/src/main.js -- -c .env -f ./config/cloudcmd.json && jest test/cloudcmd --coverage --coverageThreshold=\"{}\" && pm2 delete libms-test"
+    "test:http": "pm2 start -f --name libms-test dist/src/main.js -- -c .env -H ./config/http.json && jest test/cloudcmd --coverage --coverageThreshold=\"{}\" && pm2 delete libms-test"
   },
   "bin": "./dist/src/main.js",
   "dependencies": {
