--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -96,9 +96,19 @@ jobs:
   publish-docker-image:
     name: Publish Docker image
     needs: publish-package
-    uses: INTO-CPS-Association/DTaaS/.github/workflows/docker.yml@feature/distributed-demo
-    with: 
-      registry: ghcr.io
-      image-name: into-cps-association/dtaas-libms
-      version: ${{ github.sha }}
-      dockerfile: libms.dockerfile
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install jq
+        run: sudo apt-get install -y jq
+      - name: get version
+        id: vars
+        run: | 
+          version=`cat package.json| jq -r '.version'`
+          echo "version=$version" >> $GITHUB_OUTPUT
+      - name: publish docker image
+        uses: ./.github/workflows/docker.yml
+        with: 
+          registry: ghcr.io
+          image-name: into-cps-association/dtaas-libms
+          version: ${{ steps.vars.outputs.version }}
+          dockerfile: libms.dockerfile
