--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -11,6 +11,9 @@ jobs:
         name: Publish Docker image
         runs-on: ubuntu-latest
         steps:
+          - name: Checkout
+            uses: actions/checkout@v3
+            
           - name: Install jq
             run: sudo apt-get install -y jq
           - name: get version
