--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -7,24 +7,26 @@ on:
       - 381-create-docker-containers-for-client-lib-and-runner
 
 jobs:
-    publish-docker-image:
-        name: Publish Docker image
+    get-version:
+        name: Get version
         runs-on: ubuntu-latest
         steps:
-          - name: Checkout
-            uses: actions/checkout@v3
-            
-          - name: Install jq
-            run: sudo apt-get install -y jq
-          - name: get version
-            id: vars
-            run: | 
-              version=`cat ./client/package.json | jq -r '.version'`
-              echo "version=$version" >> $GITHUB_OUTPUT
-          - name: publish docker image
-            uses: ./.github/workflows/docker.yml
-            with: 
-              registry: ghcr.io
-              image-name: into-cps-association/test-image
-              version: ${{ steps.vars.outputs.version }}
-              dockerfile: libms.dockerfile
+            - name: Install jq
+              run: sudo apt-get install -y jq
+            - name: get version
+              id: vars
+              run: | 
+                version=`cat ./client/package.json | jq -r '.version'`
+                echo "version=$version" >> $GITHUB_OUTPUT
+        outputs:
+          version: ${{ steps.vars.outputs.version }}
+    
+    publish-docker-image:
+        name: Publish Docker image
+        needs: get-version
+        uses: ./.github/workflows/docker.yml
+        with: 
+            registry: ghcr.io
+            image-name: into-cps-association/test-image
+            version: ${{ needs.get-version.outputs.version }}
+            dockerfile: libms.dockerfile
