--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -11,6 +11,8 @@ jobs:
         name: Get version
         runs-on: ubuntu-latest
         steps:
+            - name: Checkout Repository
+              uses: actions/checkout@v4
             - name: Install jq
               run: sudo apt-get install -y jq
             - name: get version
