--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -30,5 +30,5 @@ jobs:
         with: 
             registry: ghcr.io
             image-name: into-cps-association/test-image
-            version: ${{ needs.get-version.outputs.version }}
+            version: ${{ needs.vars.outputs.version }}
             dockerfile: libms.dockerfile
