--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -7,7 +7,7 @@ on:
       - 381-create-docker-containers-for-client-lib-and-runner
 
 jobs:
-    get-version:
+    get_version:
         name: Get version
         runs-on: ubuntu-latest
         steps:
@@ -16,19 +16,19 @@ jobs:
             - name: Install jq
               run: sudo apt-get install -y jq
             - name: get version
-              id: vars
+              id: get_version
               run: | 
                 version=`cat ./client/package.json | jq -r '.version'`
                 echo "version=$version" >> $GITHUB_OUTPUT
         outputs:
-          version: ${{ steps.vars.outputs.version }}
+          version: ${{ steps.get_version.outputs.version }}
     
     publish-docker-image:
         name: Publish Docker image
-        needs: get-version
+        needs: get_version
         uses: ./.github/workflows/docker.yml
         with: 
             registry: ghcr.io
             image-name: into-cps-association/test-image
-            version: ${{ needs.vars.outputs.version }}
+            version: ${{ needs.get_version.outputs.version }}
             dockerfile: libms.dockerfile
