--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -50,26 +50,32 @@ jobs:
           files: client/coverage/clover.xml
           flags: client-unit-integration-tests
 
+  get_version:
+    name: Get version
+    runs-on: ubuntu-latest
+    steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v3
+        - name: Install jq
+          run: sudo apt-get install -y jq
+        - name: get version
+          id: get_version
+          run: | 
+            version=`cat ./client/package.json | jq -r '.version'`
+            echo "version=$version" >> $GITHUB_OUTPUT
+    outputs:
+      version: ${{ steps.get_version.outputs.version }}
+
   publish-docker-image:
     if: | 
       github.event_name == 'push' &&
       (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
       
     name: Publish Docker image
-    needs: client
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install jq
-        run: sudo apt-get install -y jq
-      - name: get version
-        id: vars
-        run: | 
-          version=`cat ./client/package.json | jq -r '.version'`
-          echo "version=$version" >> $GITHUB_OUTPUT
-      - name: publish docker image
-        uses: ./.github/workflows/docker.yml
-        with: 
-          registry: ghcr.io
-          image-name: into-cps-association/dtaas-client
-          version: ${{ steps.vars.outputs.version }}
-          dockerfile: client.dockerfile
+    needs: [client, get_version]
+    uses: ./.github/workflows/docker.yml
+    with: 
+      registry: ghcr.io
+      image-name: into-cps-association/dtaas-client
+      version: ${{ needs.get_version.outputs.version }}
+      dockerfile: client.dockerfile
