--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -93,22 +93,28 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 
-  publish-docker-image:
-    name: Publish Docker image
-    needs: publish-package
+  get_version:
+    name: Get version
     runs-on: ubuntu-latest
     steps:
-      - name: Install jq
-        run: sudo apt-get install -y jq
-      - name: get version
-        id: vars
-        run: | 
-          version=`cat ./client/package.json | jq -r '.version'`
-          echo "version=$version" >> $GITHUB_OUTPUT
-      - name: publish docker image
-        uses: ./.github/workflows/docker.yml
-        with: 
-          registry: ghcr.io
-          image-name: into-cps-association/dtaas-libms
-          version: ${{ steps.vars.outputs.version }}
-          dockerfile: libms.dockerfile
+        - name: Checkout Repository
+          uses: actions/checkout@v3
+        - name: Install jq
+          run: sudo apt-get install -y jq
+        - name: get version
+          id: get_version
+          run: | 
+            version=`cat ./client/package.json | jq -r '.version'`
+            echo "version=$version" >> $GITHUB_OUTPUT
+    outputs:
+      version: ${{ steps.get_version.outputs.version }}
+
+  publish-docker-image:
+    name: Publish Docker image
+    needs: [ publish-package, get_version]
+    uses: ./.github/workflows/docker.yml
+    with: 
+        registry: ghcr.io
+        image-name: into-cps-association/dtaas-libms
+        version: ${{ needs.get_version.outputs.version }}
+        dockerfile: libms.dockerfile
