--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -49,3 +49,33 @@ jobs:
         with:
           files: client/coverage/clover.xml
           flags: client-unit-integration-tests
+
+  get_version:
+    name: Get version
+    runs-on: ubuntu-latest
+    steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v3
+        - name: Install jq
+          run: sudo apt-get install -y jq
+        - name: get version
+          id: get_version
+          run: | 
+            version=`cat ./client/package.json | jq -r '.version'`
+            echo "version=$version" >> $GITHUB_OUTPUT
+    outputs:
+      version: ${{ steps.get_version.outputs.version }}
+
+  publish-docker-image:
+    if: | 
+      github.event_name == 'push' &&
+      (startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/release-v'))
+      
+    name: Publish Docker image
+    needs: [client, get_version]
+    uses: ./.github/workflows/docker.yml
+    with: 
+      registry: ghcr.io
+      image-name: into-cps-association/dtaas-client
+      version: ${{ needs.get_version.outputs.version }}
+      dockerfile: client.dockerfile
