Check libms tests

--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -49,6 +49,7 @@ jobs:
           yarn install
           yarn build
           yarn test:all
+          ls $LOCAL_PATH
           yarn test:http-github
         env:
           PORT: 4001
