--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "oidc-client-ts": "^2.2.2",
+    "pre-commit": "^1.2.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
