--- a/.github/workflows/lib-ms.yml
+++ b/.github/workflows/lib-ms.yml
@@ -59,6 +59,20 @@ jobs:
           LOG_LEVEL: debug
           APOLLO_PATH: /lib
 
+
+      - name: Run http mode tests
+        run: |
+          cd servers/lib
+          yarn install
+          yarn build
+          yarn test:http-github
+        env:
+          PORT: 4002
+          LOCAL_PATH: ${{ github.workspace }}/files
+          MODE: local
+          LOG_LEVEL: debug
+          APOLLO_PATH: /lib
+
       - name: Upload test coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
