Working DTaaS Docker Compose with Auth MS

--- a/servers/auth/.env
+++ b/servers/auth/.env
@@ -2,7 +2,7 @@ DTAAS_DIR='/home/astitva/Desktop/DTaaS'
 TOP_DIR='/home/astitva/Desktop/DTaaS/servers/auth'
 BASE_URL='https://gitlab.com'
 CLIENT_ID='xx'
-CLIENT_SECRET='gloas-xx'
+CLIENT_SECRET='xx'
 OAUTH_SECRET='randomabcdefg'
-username1='user1'
+username1='astitvasehgal19'
 username2='user2'
