Docker compose migration - Allows hosts for DTaaS

--- a/servers/auth/.env
+++ b/servers/auth/.env
@@ -1,8 +1,8 @@
-DTAAS_DIR='/home/astitva/Desktop/DTaaS'
-TOP_DIR='/home/astitva/Desktop/DTaaS/servers/auth'
+DTAAS_DIR='/home/azureuser/DTaaS1'
+SERVER_DNS='foo.com'
 BASE_URL='https://gitlab.com'
 CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='randomabcdefg'
-username1='astitvasehgal19'
+username1='user1'
 username2='user2'
