--- a/servers/auth/compose.yml
+++ b/servers/auth/compose.yml
@@ -18,11 +18,10 @@ services:
     image: traefik/whoami
     labels:
       - "traefik.enable=true"
-      #Models an Auth service that is open to all
+      #Models a service that is open to all
       - "traefik.http.routers.all.entryPoints=web"
-      - "traefik.http.routers.all.rule=Path(`/whoami`)"
+      - "traefik.http.routers.all.rule=Host(`${SERVER_DNS}`)&&Path(`/whoami`)"
       - "traefik.http.routers.all.middlewares=traefik-forward-auth"
-  
   libms:
     image: intocps/libms:latest
     ports:
@@ -33,7 +32,7 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.libms.entryPoints=web"
-      - "traefik.http.routers.libms.rule=PathPrefix(`/libms`)"
+      - "traefik.http.routers.libms.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/libms`)"
       - "traefik.http.routers.libms.middlewares=traefik-forward-auth"
   
   client:
@@ -41,11 +40,11 @@ services:
     ports:
       - "4000:4000"
     volumes:
-      - ${DTAAS_DIR}/deploy/config/client/env.local.js:/dtaas/client/build/env.js
+      - ${DTAAS_DIR}/deploy/config/client/env.trial.js:/dtaas/client/build/env.js
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.client.entryPoints=web"
-      - "traefik.http.routers.client.rule=PathPrefix(`/`)"
+      - "traefik.http.routers.client.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/`)"
 
   library:
     image: httpd:alpine3.19
@@ -56,7 +55,7 @@ services:
       - "traefik.enable=true"
       #Models a NoAuth needed service
       - "traefik.http.routers.noauth.entryPoints=web"
-      - "traefik.http.routers.noauth.rule=PathPrefix(`/lib`)"
+      - "traefik.http.routers.noauth.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/lib`)"
       - "traefik.http.routers.noauth.middlewares=traefik-forward-auth"
 
   user1:
@@ -71,7 +70,7 @@ services:
       - "traefik.enable=true"
       #Models a service only visible to user1
       - "traefik.http.routers.u1.entryPoints=web"
-      - "traefik.http.routers.u1.rule=PathPrefix(`/${username1}`)"
+      - "traefik.http.routers.u1.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username1}`)"
       - "traefik.http.routers.u1.middlewares=traefik-forward-auth"
   
   user2:
@@ -86,7 +85,7 @@ services:
       - "traefik.enable=true"
       #Models a service only visible to user2
       - "traefik.http.routers.u2.entryPoints=web"
-      - "traefik.http.routers.u2.rule=PathPrefix(`/${username2}`)"
+      - "traefik.http.routers.u2.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username2}`)"
       - "traefik.http.routers.u2.middlewares=traefik-forward-auth"
   
   
@@ -110,7 +109,7 @@ services:
       - "traefik.enable=true"
 
       - "traefik.http.routers.redirect.entryPoints=web"
-      - "traefik.http.routers.redirect.rule=PathPrefix(`/_oauth`)"
+      - "traefik.http.routers.redirect.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/_oauth`)"
       - "traefik.http.routers.redirect.middlewares=traefik-forward-auth"
 
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.address=http://traefik-forward-auth:4181"
